src/test/deca/context/valid/minus_int_minus_defvar_context.deca
// Description :
//
//      Test contextuellement correct de la soustraction de la variable stockant la soustraction avec définition et d'un int.
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    int y=3;
    y= y-2;
}