src/test/deca/context/invalid/modulo_undefvar_modulo_int_context.deca
// Description :
//
//      Test contextuellement incorrect de la modulo de la variable stockant la modulo sans définition et d'un int.
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    int y= y%2;
}